1999-07-07  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-proc.el (sml-update-cursor): make sure it also works if compile.el
	  is fixed to uses a marker.

	* sml-mode.el (sml-indent): fix the `fixindent'.

1999-06-22  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode-startup.el: fixed to fulfill autoload.el assumptions.

1999-06-21  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-defs.el (sml-bindings): removed bindings for TAB and M-C-\

1999-06-19  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode.el (sml-font-lock-keywords): skip type vars in "fun 'a myfn"
	(sml-calculate-indentation): add a hack to allow the user to manually
	  override the indentation algorithm with a magic comment.

	* sml-mode-startup.el: update the autoloads automatically.

1999-06-19  Stefan Monnier  <monnier@cs.yale.edu>

	* release: 3.9.2

	* sml-proc.el (sml-error-regexp-alist): solved the pathological
	  font-locking on long lines.

	* sml-move.el (sml-forward-sexp): slightly improved.

1999-06-17  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-mode.el (sml-insert-form): Only add a space if needed.
	(sml-electric-space): new command bound to M-SPC.

	* sml-defs.el (sml-close-paren): added a second field that specifies when
	  not to delegate.  Only used for `else'.

1999-06-16  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-move.el (sml-(for|back)ward-sym): distinguishes between
	  operator "=" and syntax for definitions "d=".

	* sml-defs.el (sml-indent-starters, sml-delegate): simplified.
	(sml-symbol-indent): added outdentation for `fn' and generalized it to
	  also work for `of' and `in' and `end'.

	* sml-mode.el (sml-nested-if-indent): reintroduced as well as the special
	  casing code for it.
	(sml-indent-relative): generalize the treatment of `of', `in', `end', ...
	(sml-electric-pipe): removed the slow behavior and added smarts for the
	  never-used type-variable arguments for function definitions.

1999-06-15  Stefan Monnier  <monnier@cs.yale.edu>
