@@ -15,7 +15,7 @@
 
 ;; the rest is the auto-generated autoloads
 
-;;;### (autoloads (sml-mode) "sml-mode" "sml-mode.el" (14190 21870))
+;;;### (autoloads (sml-mode) "sml-mode" "sml-mode.el" (14249 59771))
 ;;; Generated autoloads from sml-mode.el
 
 (autoload (quote sml-mode) "sml-mode" "\
@@ -26,7 +26,7 @@ Entry to this mode runs the hooks on sml-mode-hook.
 ;;;***
 
 ;;;### (autoloads (sml-load-file sml-send-buffer sml-send-region
-;;;;;;  switch-to-sml run-sml) "sml-proc" "sml-proc.el" (14192 10910))
+;;;;;;  switch-to-sml run-sml) "sml-proc" "sml-proc.el" (14255 18522))
 ;;; Generated autoloads from sml-proc.el
 
 (autoload (quote run-sml) "sml-proc" "\
